--- a/index.html
+++ b/index.html
@@ -1,1 +1,220 @@
 <!-- In this file you are going to write html code -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>arcStudio</title>
+    <link href="arcstudio.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+
+    <div id="imageDiv">
+
+        <div id="topBar">
+
+            <table id="tblStripe">
+                <tr>
+                    <td>
+                        <img src="logo.png" class="logo" alt="Logo" />
+                    </td>
+                    <td>
+                        <ul class="navbar">
+                            <li>
+                                <a href="#">Our Story</a>
+                            </li>
+                            <li>
+                                <a href="#">Products</a>
+                            </li>
+                            <li>
+                                <a href="#">Journals</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+
+        </div>
+
+        <div id="bottomBar">
+
+            <table id="tblStripeBottom">
+                <tr>
+                    <td>
+                        <p class="pInfo">Have Project in mind? We would love to hear from you!</p>
+                    </td>
+                    <td>
+                        <button class="btnGetInTouch">get in touch with us</button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <section class="services_wrapper">
+
+        <div class="head">
+            <h1>We are ARK Studio,we make awesome stuff.</h1>
+        </div>
+        <div class="serviceCont">
+            <ul class="service">
+
+                <li> 
+                    <img src="s1.png" alt="img">
+                     <br>                                                                                                                    
+                     <br>
+                    <h3>    Lorem ipsum .</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text</p>
+                </li>
+
+                <li> 
+                   <img src="s2.png" alt="img">
+                    <br>
+                    <br>
+                    <div>
+                    <h3>       Lorem ipsum .</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text</p>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="s3.png" alt="img">
+                    <br>
+                    <br>
+                    <h3>      Lorem ipsum.</h3>
+
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been 
+                        the industry's standard dummy text</p>
+                </li>
+            </ul>
+        </div>
+<br>
+<br>
+</section>
+
+
+<section class="recent_work">
+
+    <img src="w1.jpg" alt="img">
+
+    <img src="w2.jpg" alt="img">
+
+    <img src="w3.jpg" alt="img">
+
+    <img src="w4.jpg" alt="img">
+
+    <img src="w5.jpg" alt="img">
+
+</section>
+
+
+
+<section class="testimonials_wrapper">
+    <section class="inner">
+        <h1>Testimonials</h1>
+        <section class="row">
+            <section class="col">
+                <section class="testimonial">
+                    <img src="client1.jpg" alt="">
+                    <section class="name">John Doe/Manager</section>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                         typesetting industry. Lorem Ipsum has been 
+                         the industry's standard dummy text</p>
+                </section>
+            </section>
+
+            <section class="col">
+                <section class="testimonial">
+                    <img src="client2.jpg" alt="">
+                    <section class="name">John Doe/Manager</section>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                         typesetting industry. Lorem Ipsum has been 
+                         the industry's standard dummy text</p>
+                </section>
+            </section>
+
+            <section class="col">
+                <section class="testimonial">
+                    <img src="client3.jpg" alt="">
+                    <section class="name">John Doe/Manager</section>
+                    <p>Lorem Ipsum is simply dummy text of the printing and
+                         typesetting industry. Lorem Ipsum has been 
+                         the industry's standard dummy text</p>
+                </section>
+            </section>
+
+        </section>
+    </section>
+</section>
+
+
+<footer>
+    <div class="footer_widget">
+
+
+        
+        <div>
+
+            <h3>Location</h3>
+            <br>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been 
+                the industry's standard dummy text</p>
+
+            <img src="social_hover.png" alt="img">
+
+        </div>
+
+        <div>
+
+            <h3>Company</h3>
+            <br>
+            <ul id="comp_list">
+
+                <li ><a id="comp_item_1" href="#">Our Story</a></li>
+
+                <li ><a id="comp_item_2" href="#">Mission</a></li>
+
+                <li ><a id="comp_item_3" href="#">Journal</a></li>
+
+                <li ><a id="comp_item_4" href="#">Careers</a></li>
+
+            </ul>
+
+        </div>
+
+        <div>  
+
+              <h3>Support</h3>
+              <br>
+              <ul id="sup_list">
+
+                <li ><a id="sup_item_1" href="#">FAQ</a></li>
+
+                <li ><a id="sup_item_2" href="#">Contact Us</a></li>
+
+                <li ><a id="sup_item_3" href="#">Policies</a></li>
+            </ul>
+
+        </div>
+
+        <div>
+
+            <h3>ARK Studio</h3>
+            <br>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque, repellat voluptatibus accusantium nemo nihil dolorem.</p>
+
+        </div>
+
+    </div>
+    <p class="rights">2014 ARK Studio - All Rights Reserved</p>
+    <br>
+</footer>
+</body>
+</html>
