--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                     <td>
                         <ul id="nav_list">
                             <li>
-                                <a href="nav_item_1">Our Story</a>
+                                <a href="#" id="nav_item_1">Our Story</a>
                             </li>
                             <li>
-                                <a href="nav_item_2">Products</a>
+                                <a href="#" id="nav_item_2">Products</a>
                             </li>
                             <li>
-                                <a href="nav_item_3">Journals</a>
+                                <a href="#" id="nav_item_3">Journals</a>
                             </li>
                             <li>
-                                <a href="nav_item_4">Contact</a>
+                                <a href="#" id="nav_item_4">Contact</a>
                             </li>
                         </ul>
                     </td>
@@ -44,14 +44,14 @@
                         <p class="cta_text">Have Project in mind? We would love to hear from you!</p>
                     </td>
                     <td>
-                        <button class="cta_link">get in touch with us</button>
+                        <a href="#" id="cta_link">GET IN TOUCH WITH US</a>
                     </td>
                 </tr>
             </table>
         </section>
     </header>
 
-    <section class="services_wrapper">
+    <section class="services wrapper">
 
         <div class="head">
             <h1>We are ARK Studio,we make awesome stuff.</h1>
