--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 <a href="#" id="nav_item_2">Products</a>
                             </li>
                             <li>
-                                <a href="#" id="nav_item_3">Journals</a>
+                                <a href="#" id="nav_item_3">Journal</a>
                             </li>
                             <li>
                                 <a href="#" id="nav_item_4">Contact</a>
@@ -41,7 +41,7 @@
             <table id="tblStripeBottom">
                 <tr>
                     <td>
-                        <p class="cta_text">Have Project in mind? We would love to hear from you!</p>
+                        <p id="cta_text">Have Project in mind? We would love to hear from you!</p>
                     </td>
                     <td>
                         <a href="#" id="cta_link">GET IN TOUCH WITH US</a>
