--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h1>Testimonials</h1>
         <section class="row">
             <section class="col">
-                <section class="testimonial">
+                <section id="testimonial">
                     <img src="client1.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
@@ -129,7 +129,7 @@
             </section>
 
             <section class="col">
-                <section class="testimonial">
+                <section id="testimonial">
                     <img src="client2.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
@@ -139,7 +139,7 @@
             </section>
 
             <section class="col">
-                <section class="testimonial">
+                <section id="testimonial">
                     <img src="client3.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
