--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             <table id="tblStripeBottom">
                 <tr>
                     <td>
-                        <p id="cta_text">Have Project in mind? We would love to hear from you!</p>
+                        <p id="cta_text">
+                       Have a project in mind? We would love to hear from you!
+                        </p>
                     </td>
                     <td>
                         <a href="#" id="cta_link">GET IN TOUCH WITH US</a>
@@ -115,41 +117,41 @@
 
 
 <section class="testimonials_wrapper">
-    <section class="inner">
+    <div class="inner">
         <h1>Testimonials</h1>
-        <section class="row">
-            <section class="col">
-                <section id="testimonial">
+        <div class="row">
+            <div class="col">
+                <div id="testimonial">
                     <img src="client1.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
                          typesetting industry. Lorem Ipsum has been 
                          the industry's standard dummy text</p>
-                </section>
-            </section>
+                    </div>
+                </div>
 
-            <section class="col">
-                <section id="testimonial">
+            <div class="col">
+                <div id="testimonial">
                     <img src="client2.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
                          typesetting industry. Lorem Ipsum has been 
                          the industry's standard dummy text</p>
-                </section>
-            </section>
+                    </div>
+                </div>
 
-            <section class="col">
-                <section id="testimonial">
+            <div class="col">
+                <div id="testimonial">
                     <img src="client3.jpg" alt="">
                     <section class="name">John Doe/Manager</section>
                     <p>Lorem Ipsum is simply dummy text of the printing and
                          typesetting industry. Lorem Ipsum has been 
                          the industry's standard dummy text</p>
-                </section>
-            </section>
+                </div>
+            </div>
 
-        </section>
-    </section>
+        </div>
+    </div>
 </section>
 
 
