--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
 
-<section class="testimonials_wrapper">
+<section class="testimonials wrapper">
     <div class="inner">
         <h1>Testimonials</h1>
         <div class="row">
