--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
 
 <section class="testimonials wrapper">
+    <div class="testimonials_wrapper">
     <div class="inner">
         <h1>Testimonials</h1>
         <div class="row">
@@ -152,6 +153,7 @@
 
         </div>
     </div>
+    </div>>
 </section>
 
 
