--- a/index.html
+++ b/index.html
@@ -117,43 +117,55 @@
 
 
 <section class="testimonials wrapper">
-    <div class="testimonials_wrapper">
-    <div class="inner">
-        <h1>Testimonials</h1>
-        <div class="row">
-            <div class="col">
-                <div id="testimonial">
-                    <img src="client1.jpg" alt="">
-                    <section class="name">John Doe/Manager</section>
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                         typesetting industry. Lorem Ipsum has been 
-                         the industry's standard dummy text</p>
-                    </div>
-                </div>
 
-            <div class="col">
-                <div id="testimonial">
-                    <img src="client2.jpg" alt="">
-                    <section class="name">John Doe/Manager</section>
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                         typesetting industry. Lorem Ipsum has been 
-                         the industry's standard dummy text</p>
-                    </div>
-                </div>
+    <div class="tHead">
 
-            <div class="col">
-                <div id="testimonial">
-                    <img src="client3.jpg" alt="">
-                    <section class="name">John Doe/Manager</section>
-                    <p>Lorem Ipsum is simply dummy text of the printing and
-                         typesetting industry. Lorem Ipsum has been 
-                         the industry's standard dummy text</p>
-                </div>
-            </div>
+        Testimonials
 
-        </div>
     </div>
-    </div>>
+
+    <ul class="info">
+
+        <li>
+
+            <img src="client1.jpg" alt="img">
+
+           <br>
+
+            <div class="client"><b>john doe</b>/manager</div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates impedit minima natus odit quia tenetur alias quae excepturi voluptatem quod!</p>
+
+        </li>
+
+        <li>
+
+            <img src="client2.jpg" alt="img">
+
+            <div class="client"> <b>john doe</b>/ceo</div>
+
+          
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates impedit minima natus odit quia tenetur alias quae excepturi voluptatem quod!</p>
+
+        </li>
+
+        <li>
+
+            <img src="client3.jpg" alt="img">
+
+            <div class="client"><b>john doe</b>/owner</div>
+
+           
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates impedit minima natus odit quia tenetur alias quae excepturi voluptatem quod!</p>
+
+        </li>
+
+    </ul>
+
+
+
 </section>
 
 
